--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap">
   
  
 </head>
@@ -34,7 +35,7 @@
            
            <h3>We are a full-service creative agency specializing in helping brands grow fast. 
             Engage your clients through compelling visuals that do most of the marketing for you.</h3>
-            <h3 class="trans2"> LEARN MORE</h3>
+            <a href="www">LEARN MORE</a>
         </div>
     </div>
     <div id="footer_o" class="footer_1"></div>
@@ -46,7 +47,7 @@
             <h1 >Stand out to the right audience</h1>
            
          <h3>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. </h3>
-         <h1 class="learn" >LEARN MORE</h1>
+         <a href="www">LEARN MORE</a>
         </div>
     </div>
 </div>
