--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </div>
 <div class="Emily">
       <h2>  Emily R.</h2>
-  <h3>Marketing Director</h3>
+  <h3>Marketing Directors</h3>
 </div>
 
     </div>
