--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </h3>
 </div>
 <div class="Emily">
-      <h2>  Emily R.</h2>
+      <h2>  Emily R..</h2>
   <h3>Marketing Director</h3>
 </div>
 
